haproxy/haproxy-edge/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-testapp-edge
  labels:
    ingress: testapp-edge
