haproxy/haproxy-edge/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: edge-app-svc
  namespace: demo-edge
  labels:
    app: edge-app
spec:
  type: ClusterIP
  selector:
    app: edge-app
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
