haproxy/haproxy-edge/04-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: edge-app-route
  namespace: demo-edge
  labels:
    app: edge-app
spec:
  host: edge-app.apps.okd-sno.brainybots.cloud
  to:
    kind: Service
    name: edge-app-svc
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
